--- a/tabla.html
+++ b/tabla.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta name="author" content="Javier Estrada Amat" />
     <meta name="copyright" content="Javier Estrada Amat" />
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/icon.png" type="image/x-icon">
     <title>Tabla</title>
     <!-- Hay palabras/nombres/textos que en el pdf no se lee bien y me los he inventado por que no se que pone -->
