--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta name="author" content="Javier Estrada Amat" />
     <meta name="copyright" content="Javier Estrada Amat" />
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/icon.png" type="image/x-icon">
     <title>QueVeo</title>
 
